@@ -52,7 +52,6 @@ Classes
 
 """
 import os
-import gsd.hoomd
 import numpy as np
 
 from . import guessers
@@ -74,6 +73,13 @@ from ..core.topologyattrs import (
     Resnames,
     Segids,
 )
+
+try:
+    import gsd.hoomd
+except ImportError:
+    HAS_GSD = False
+else:
+    HAS_GSD = True
 
 
 class GSDParser(TopologyReaderBase):
@@ -100,6 +106,14 @@ class GSDParser(TopologyReaderBase):
 
     """
     format = 'GSD'
+
+    def __init__(self, filename):
+
+        if not HAS_GSD:
+            errmsg = ("GSDParser: To read a Topology from a Hoomd GSD "
+                      "file, please install gsd")
+            raise ImportError(errmsg)
+        super(GSDParser, self).__init__(filename)
 
     def parse(self, **kwargs):
         """Parse Hoomd GSD file
