@@ -47,7 +47,6 @@ dependencies = [
     'threadpoolctl',
     'packaging',
     'fasteners',
-    'gsd>=1.9.3,<3.0',
 ]
 keywords = [
     "python", "science", "chemistry", "biophysics", "molecular-dynamics",
@@ -80,6 +79,7 @@ extra_formats = [
     "chemfiles>=0.10",
     "pyedr>=0.7.0",
     "pytng>=0.2.3",
+    "gsd>=1.9.3,<3.0",
 ]
 analysis = [
     "seaborn",
