@@ -26,36 +26,48 @@ import pytest
 from numpy.testing import assert_almost_equal
 
 import MDAnalysis as mda
-from MDAnalysis.coordinates.GSD import GSDReader
+from MDAnalysis.coordinates.GSD import GSDReader, HAS_GSD
 from MDAnalysisTests.datafiles import GSD
 
 
-@pytest.fixture
-def GSD_U():
-    return mda.Universe(GSD)
+@pytest.mark.skipif(HAS_GSD, reason='gsd is installed')
+def test_no_gsd_u_raises():
+    with pytest.raises(ImportError, match='please install gsd'):
+        _ = mda.Universe(GSD)
 
 
-def test_gsd_positions(GSD_U):
-    # first frame first particle
-    ts = GSD_U.trajectory[0]
-    assert_almost_equal(GSD_U.atoms.positions[0],
-                        [ -5.4000001 , -10.19999981, -10.19999981])
-    # second frame first particle
-    ts = GSD_U.trajectory[1]
-    assert_almost_equal(GSD_U.atoms.positions[0],
-                        [ -5.58348083,  -9.98546982, -10.17657185])
+@pytest.mark.skipif(HAS_GSD, reason='gsd is installed')
+def test_gsd_reader_raises():
+    with pytest.raises(ImportError, match='please install gsd'):
+        _ = GSDReader('foo')
 
 
-def test_gsd_n_frames(GSD_U):
-    assert len(GSD_U.trajectory) == 2
+@pytest.mark.skipif(not HAS_GSD, reason='gsd is not installed')
+class TestGSDReader:
+    @pytest.fixture(scope='class')
+    def GSD_U(self):
+        return mda.Universe(GSD)
 
+    def test_gsd_positions(self, GSD_U):
+        # first frame first particle
+        GSD_U.trajectory[0]
+        assert_almost_equal(GSD_U.atoms.positions[0],
+                            [-5.4000001 , -10.19999981, -10.19999981])
+        # second frame first particle
+        GSD_U.trajectory[1]
+        assert_almost_equal(GSD_U.atoms.positions[0],
+                            [-5.58348083,  -9.98546982, -10.17657185])
+    
+    def test_gsd_n_frames(self, GSD_U):
+        assert len(GSD_U.trajectory) == 2
 
-def test_gsd_dimensions(GSD_U):
-    ts = GSD_U.trajectory[0]
-    assert_almost_equal(ts.dimensions,
-                        [ 21.60000038,21.60000038,21.60000038,90.,90.,90.])
+    def test_gsd_dimensions(self, GSD_U):
+        ts = GSD_U.trajectory[0]
+        assert_almost_equal(
+            ts.dimensions,
+            [21.60000038, 21.60000038, 21.60000038, 90., 90., 90.]
+        )
 
-
-def test_gsd_data_step(GSD_U):
-    assert GSD_U.trajectory[0].data['step'] == 0
-    assert GSD_U.trajectory[1].data['step'] == 500
+    def test_gsd_data_step(self, GSD_U):
+        assert GSD_U.trajectory[0].data['step'] == 0
+        assert GSD_U.trajectory[1].data['step'] == 500
